# ironhorse

./: .gitignore  COMPONENT_INTERFACE_IMPLEMENTATION.md  README.md  SHARED_PACKAGE_RESTRUCTURE_SUMMARY.md  TEMPLATE_UPDATES.md  docker-compose.yml  pyproject.toml  test_component_interface.sh  test_shared_import.py  test_shared_restructure.sh  test_template.sh  update_component_envs.sh
components/docling-parser/: README.md  pyproject.toml
components/docling-parser/api/: __init__.py  routes.py
components/langchain-splitter/: README.md  pyproject.toml
components/langchain-splitter/api/: routes.py
components/langchain-splitter/config/: __init__.py
components/langchain-splitter/core/: __init__.py
components/langchain-splitter/langchain_splitter/api/: __init__.py  main.py
components/langchain-splitter/langchain_splitter/config/: __init__.py  settings.py
components/langchain-splitter/langchain_splitter/core/: langchain_splitter.py
components/langchain-splitter/tests/: __init__.py  test_api.py  test_core.py
components/shared/: pyproject.toml
components/shared/shared/: __init__.py  component.py
data/documents/: .gitkeep
docs/: COMPONENT_DEVELOPMENT_GUIDE.md  DEVELOPER_QUICK_REFERENCE.md  EXAMPLE_COMPONENT_WALKTHROUGH.md  IMPLEMENTATION_SUMMARY.md  PYTHON_ENVIRONMENT_SETUP.md  QUICKSTART.md  graph-database-comparison.md  graph-rag-architecture.md  vllm_ollama_comparison.md
docs/technology-selection/: architecture-update-summary.md  document-parser-comparison.md  graph-rag-architecture-updated.md  rag-framework-comparison.md  text-chunking-comparison.md  vector-database-comparison.md  vllm-vs-ollama-comparison.md  web-ui-framework-comparison.md
shared/: __init__.py  pyproject.toml
shared/schemas/: __init__.py  chunk.py  document.py  response.py
templates/: README.md
templates/component/: cookiecutter.json
templates/component/{{cookiecutter.component_name}}/: README.md  pyproject.toml
templates/component/{{cookiecutter.component_name}}/api/: __init__.py  main.py  routes.py
templates/component/{{cookiecutter.component_name}}/config/: __init__.py  settings.py
templates/component/{{cookiecutter.component_name}}/core/: __init__.py
templates/component/{{cookiecutter.component_name}}/tests/: __init__.py  test_api.py  test_core.py
templates/component/{{cookiecutter.component_name}}/{{cookiecutter.component_name.replace('-', '_')}}/api/: routes.py
templates/component/{{cookiecutter.component_name}}/{{cookiecutter.component_name.replace('-', '_')}}/config/: __init__.py
templates/component/{{cookiecutter.component_name}}/{{cookiecutter.component_name.replace('-', '_')}}/core/: {{cookiecutter.component_name.replace('-', '_')}}.py
(+18 files in other folders)
