[project]
name = "shared-schemas"
version = "0.1.0"
description = "Shared schemas and utilities for AI toolkit components"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
