[project]
name = "{{cookiecutter.component_name}}"
version = "0.1.0"
description = "{{cookiecutter.component_description}}"
requires-python = ">={{cookiecutter.python_version}}"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # Note: shared-schemas must be installed separately with: pip install -e ../shared
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.component_name.replace('-', '_')}}"]
